# verishda

./: .gitignore  Cargo.toml  README.md  Secrets.dev.toml  Secrets.toml  build.rs  release.yaml  spin.toml  verishda.yaml
.github/workflows/: release.yaml  rust.yaml
src/: axum_auth  client.rs  config.rs  core.rs  create_tables.sql  error.rs  example_sites.sql  lib.rs  main.rs  memory_store.rs  oidc_cache.rs  scheme.rs  site.rs  spin_store.rs  verishda.yaml
src/core/: location.rs  mod.rs
src/oidc/: client_impl.rs  mod.rs
src/platform/: mod.rs  windows.rs
src/platform/windows/: mod.rs  uri_scheme.rs
src/store/: mod.rs
ui/: mainview.slint  ui.slint
verishda-config/: Cargo.toml  README.md
verishda-config/src/: lib.rs
verishda-dto/: Cargo.toml  build.rs
verishda-dto/src/: lib.rs
verishda-server/: Cargo.toml  README.md  Secrets.toml  build.rs  spin.toml
verishda-server/migrations/: 001_create_tables.sql  V2__create_favorites.sql
verishda-server/src/: create_tables.sql  datamodel.rs  error.rs  example_sites.sql  lib.rs  memory_store.rs  oidc_cache.rs  site.rs  verishda.yaml  verishda_dto.rs
verishda-server/src/oidc/: client_impl.rs
verishda-slint/: Cargo.toml  README.md  Shuttle.toml  build.rs  openapi.yaml
verishda-slint/src/: README.md  main.rs
verishda-slint/src/core/: location.rs  mod.rs  verishda_dto.rs
verishda-slint/src/core/location/: dummy.rs  macos.rs  mod.rs  windows.rs
verishda-slint/src/core/startup/: macos.rs  mod.rs  windows.rs
verishda-slint/src/platform/: mod.rs
verishda-slint/src/platform/unix/: mod.rs
verishda-slint/src/platform/windows/: mod.rs  open_url.rs  uri_scheme.rs
verishda-slint/src/util/: macos.rs  mod.rs
verishda-slint/ui/: mainview.slint  ui.slint
verishda-slint/ui/icons/: attribution.md  tray.rc
