[workspace]
resolver = "2"

members = [
    "verishda-server",
    "verishda-slint",
    "verishda-dto",
    "verishda-config",
]

[patch.crates-io]

postgres-protocol = {git="https://github.com/sfackler/rust-postgres.git", branch="master"}
tokio-postgres = {git="https://github.com/sfackler/rust-postgres.git", branch="master"}

[workspace.dependencies]
progenitor = {git="https://github.com/upachler/progenitor.git", branch="feature/post-hook-async"}
progenitor-client = {git="https://github.com/upachler/progenitor.git", branch="feature/post-hook-async"}
reqwest = {version="0.12", features = ["json", "stream"]}
chrono = "0.4"
