[package]
name = "verishda-dto"
edition = "2021"

[lib]

[dependencies]
progenitor-client = "0.6"
reqwest = {version="0.11", features = ["json", "stream"] }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
progenitor = {path="../../progenitor/progenitor"}
prettyplease = "0.2.20"
serde_yaml = "0.9"
syn = "2.0.64"
quote = "1.0"
proc-macro2 = "1.0"

