[package]
name = "verishda-dto"
edition = "2021"

[lib]

[dependencies]
progenitor-client = {workspace=true}
reqwest = {workspace = true }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
chrono = {workspace=true, features=["serde"]}
progenitor = {workspace=true}
prettyplease = "0.2.20"
serde_yaml = "0.9"
syn = "2.0.64"
quote = "1.0"
proc-macro2 = "1.0"

