[package]
name = "verishda"
authors = ["Pachler, Uwe <uwe.pachler@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"
default-run = "verishda-standalone"

[[bin]]
name = "verishda-standalone"
path = "src/bin/standalone.rs"

[[bin]]
name = "verishda"
path = "src/bin/shuttle.rs"

[dependencies]
verishda-dto = {path="../verishda-dto"}
verishda-config = {path="../verishda-config"}
# date and time
chrono = {workspace = true}
# Useful crate to handle errors.
anyhow = {version="1", features=["backtrace"]}
thiserror = "1.0.40"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "1.1.0"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
swagger-ui = "0.1"
mime_guess = "2.0"
log = "0.4.20"
env_logger = "0.11.3"

serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.96"
openidconnect = {version="3.5.0"}

# IMPORTANT: There are build issues on Windows, see https://crates.io/crates/jwt-simple/0.12.9 "Working around compilation issues with the boring crate"
jwt-simple = {version="0.12.9", default-features=false, features=["pure-rust"]}

axum = { version = "0.7.5", features = ["macros", "original-uri", "ws"] }
axum-extra = {version="0.9.3", features=["typed-header"]}

tokio = {version = "1.33.0", features=["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = {version="0.48.0", features=["postgres","sqlx"]}
dashmap = "5.5.3"
refinery = { version = "0.8.14", features = ["postgres", "tokio-postgres"] }
tokio-postgres = "0.7"
futures-util = "0.3.30"
