[package]
name = "verishda-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
anyhow = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
openidconnect = "3.5.0"
url = "2.5.0"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = "0.7.10"
json = "0.12.4"
futures = "0.3.30"
progenitor-client = "0.6.0"
reqwest = {version="0.11.25", features = ["json", "stream"] }
log = "0.4.21"
simple_logger = "4.3.3"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
webbrowser = "1.0.0"

[build-dependencies]
slint-build = "1.5"
prettyplease = "0.1"
progenitor = "0.6.0"
serde_yaml = "0.9"
syn = "1.0"
quote = "1.0"
embed-manifest = "1.4.0"
embed-resource = "2.4.2"

[target.'cfg(windows)'.dependencies]
windows = {version="0.54.0", features = [ "Devices_Geolocation", "Devices_Geolocation_Geofencing", "Foundation", "Foundation_Collections", "Win32_UI_WindowsAndMessaging", "Win32_System_Console" ]}
winreg = "0.52"
tray-item = "0.10.0"

