[package]
name = "verishda-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Verishda Client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "Verishda"
identifier = "name.pachler.verishda"
icon = ["ui/icons/logo.png"]

[dependencies]
slint = "1.7"
anyhow = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
openidconnect = "3.5.0"
url = "2.5.0"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = "0.7.10"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
json = "0.12.4"
futures = "0.3.30"
reqwest = {workspace = true }
log = "0.4.21"
simple_logger = "5.0.0"
chrono = { workspace=true, features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
webbrowser = "1.0.0"

verishda-dto = {path="../verishda-dto"}
verishda-config = {path="../verishda-config"}

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-core-location = {version="0.2.2", features=["CLLocationManager", "CLLocationManagerDelegate", "CLLocation"]}
oslog = "0.2.0"
core-foundation = "0.10.0"
objc2-foundation = "0.2.2"

[build-dependencies]
slint-build = "1.7"
quote = "1.0"
embed-manifest = "1.4.0"
embed-resource = "2.4.2"

[target.'cfg(windows)'.dependencies]
windows = {version="0.54.0", features = [ "Devices_Geolocation", "Devices_Geolocation_Geofencing", "Foundation", "Foundation_Collections", "Win32_UI_WindowsAndMessaging", "Win32_System_Console" ]}
winreg = "0.52"

